# handler/response.go
@@ -44,4 +44,7 @@ type ShowOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
-
+type ListOpeningsResponse struct {
+	Message string                    `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
